Integration_Examples/Inbound_Mexichem/objects/IntegrationMapItem__c.object
<CustomObject>
    <description>[a08][IntegrationMapItem__c] Mapa de integração item.</description>
    <fields>
        <fullName>DefaultValueTxt__c</fullName>
        <label>Valor padrão</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalFieldNameTxt__c</fullName>
        <label>Campo externo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaClassName__c</fullName>
        <label>Nome da classe da fórmula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationMap__c</fullName>
        <label>Mapa de integração</label>
        <referenceTo>IntegrationMap__c</referenceTo>
        <relationshipLabel>Mapa de integração items</relationshipLabel>
        <relationshipName>IntegrationMapItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InternalFieldNameTxt__c</fullName>
        <label>Campo interno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>É ativo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>É obrigatório?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedObjectExternalIdTxt__c</fullName>
        <label>Id externo do objeto relacionado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeTxt__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Lookup Formula</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mapa de integração item</label>
    <nameField>
        <displayFormat>ITI-{000000000}</displayFormat>
        <label>Nome de Mapa de integração item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mapa de integração items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>